Address PR comments